--- a/client/package.json
+++ b/client/package.json
@@ -11,18 +11,24 @@
     "axios": "^0.24.0",
     "date-fns": "^2.28.0",
     "firebase": "^9.6.3",
+    "google-search-results-nodejs": "^2.1.0",
     "material-ui": "^0.20.2",
     "react": "^17.0.2",
     "react-big-calendar": "^0.38.5",
+    "react-bootstrap": "^2.1.1",
     "react-chat-engine": "^1.11.22",
     "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^4.0.2",
     "react-multi-carousel": "^2.6.5",
+    "react-multi-select-component": "^4.2.1",
+    "react-razorpay": "^1.1.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-select": "^5.2.2",
+    "react-simple-chatbot": "^0.6.1",
     "react-toastify": "^8.1.0",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
