--- a/server/package.json
+++ b/server/package.json
@@ -16,10 +16,12 @@
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
     "fs": "0.0.1-security",
+    "google-search-results-nodejs": "^2.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.3.0",
     "mongoose": "^6.1.5",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "razorpay": "^2.8.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
