--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^1.8.6",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@react-google-maps/api": "^2.7.0",
     "@material-ui/core": "^4.12.3",
     "@syncfusion/ej2-react-schedule": "^19.4.42",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^6",
     "axios": "^0.24.0",
     "date-fns": "^2.28.0",
     "firebase": "^9.6.3",
@@ -16,6 +21,7 @@
     "react": "^17.0.2",
     "react-big-calendar": "^0.38.5",
     "react-bootstrap": "^2.1.1",
+    "react-icons": "^4.3.1",
     "react-chat-engine": "^1.11.22",
     "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
